Fixed actor checkboxes displaying out of place when using MP6 admin UI.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@702057 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -61,22 +61,21 @@
 /**
  * The checkbox that lets the user show/hide a menu for the currently selected actor.
  */
-.ws_actor_access_checkbox,
-input[type="checkbox"].ws_actor_access_checkbox /* Ensure we override WP defaults. */
+#ws_menu_editor .ws_actor_access_checkbox,
+#ws_menu_editor input[type="checkbox"].ws_actor_access_checkbox /* Ensure we override WP defaults. */
 {
     margin-right: 2px;
     margin-left: 2px;
+    margin-top: 1px;
     vertical-align: text-top;
 }
 
 /* The checkbox is only visible when viewing the menu configuration for a specific actor. */
-.ws_actor_access_checkbox {
+#ws_menu_editor .ws_actor_access_checkbox {
     display: none;
 }
 
-.ws_is_actor_view .ws_actor_access_checkbox,
-.ws_is_actor_view input[type="checkbox"].ws_actor_access_checkbox
-{
+#ws_menu_editor.ws_is_actor_view .ws_actor_access_checkbox {
     display: inline-block;
 }
 
